fix getfirst